# yt2audi

./: .gitignore  .pre-commit-config.yaml  Audi Q5 (2019) Supported Media & Specifications.md  BATCH_FILES_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOWNLOAD_OPTIMIZATION.md  GETTING_STARTED.md  OFFICIAL_SPECS_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PROFILE_COMPARISON.md  QUICKSTART.md  README.md  ROADMAP.md  TEST_REPORT.md  download-convert.bat  install.bat  pyproject.toml  quick-download.bat  requirements.txt  split-existing-file.bat  urls.txt  yt2audi-interactive.bat
.github/workflows/: ci.yml
_internal/websockets-15.0.1.dist-info/: RECORD
configs/profiles/: audi_q5_exfat.toml  audi_q5_long_videos.toml  audi_q5_mmi.toml  high_quality.toml
docs/: conf.py  index.rst
docs/api/: modules.rst  yt2audi.cli.rst  yt2audi.config.rst  yt2audi.core.rst  yt2audi.models.rst  yt2audi.rst  yt2audi.transfer.rst  yt2audi.utils.rst
src/yt2audi/: __init__.py  __main__.py  exceptions.py
src/yt2audi/cli/: __init__.py  helpers.py  main.py
src/yt2audi/config/: __init__.py  defaults.py  loader.py
src/yt2audi/core/: __init__.py  cache.py  converter.py  downloader.py  gpu_detector.py  history.py  pipeline.py  splitter.py
src/yt2audi/models/: __init__.py  job.py  profile.py
src/yt2audi/transfer/: __init__.py  usb.py
src/yt2audi/utils/: __init__.py  logging.py  paths.py  validation.py
src/yt2audi/web/: app.py
src/yt2audi/web/static/css/: style.css
src/yt2audi/web/static/js/: main.js
src/yt2audi/web/templates/: index.html
tests/: __init__.py  conftest.py
tests/fixtures/: test_urls.txt
tests/manual/: test_download_optimization.py  test_foundation.py  test_splitter_fix.py
tests/unit/: test_cache.py  test_cli_helpers.py  test_cli_helpers_extended.py  test_cli_main.py  test_config_loader.py  test_converter.py  test_converter_extended.py  test_downloader.py  test_downloader_extended.py  test_gpu_detector.py  test_history.py  test_logging.py  test_paths.py  test_pipeline.py  test_pipeline_extended.py  test_profile.py  test_splitter.py  test_usb.py  test_validation.py
