[tool.poetry]
name = "yt2audi"
version = "2.0.0"
description = "Cross-platform YouTube downloader and converter optimized for Audi Q5 MMI/MIB2/3 systems"
authors = ["AAlmana"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/yt2audi"
repository = "https://github.com/yourusername/yt2audi"
keywords = ["youtube", "downloader", "audi", "mmi", "video", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
packages = [{include = "yt2audi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# CLI Framework
typer = {extras = ["all"], version = "^0.12.0"}

# GUI (optional)
PyQt6 = {version = "^6.6.0", optional = true}

# Video Processing
yt-dlp = ">=2024.12.0"
ffmpeg-python = "^0.2.0"

# Configuration & Validation
pydantic = "^2.0"
pydantic-settings = "^2.0"
tomli = {version = "^2.0.1", python = "<3.11"}
tomli-w = "^1.0.0"

# Async & I/O
aiofiles = "^24.1.0"
aiohttp = "^3.9.0"

# GPU Detection
py3nvml = "^0.2.7"
GPUtil = "^1.4.0"

# Utilities
tenacity = "^8.0.0"
rich = "^13.0.0"
structlog = "^24.0.0"
watchdog = "^4.0.0"

[tool.poetry.extras]
gui = ["PyQt6"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"

# Type Checking
mypy = "^1.8.0"
pyright = "^1.1.350"
types-aiofiles = "^24.1.0"

# Code Quality
black = "^24.0.0"
ruff = "^0.1.0"

# Build & Packaging
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
yt2audi = "yt2audi.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "ARG", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["yt2audi"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ffmpeg.*",
    "GPUtil.*",
    "py3nvml.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=yt2audi",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "build",
    "dist",
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "All"
